# openGL-3D

./: .gitignore  CMakeLists.txt  compile.sh  imgui.ini  main.cpp
.cache/clangd/index/: camera.h.3F1354E84806D45F.idx  cube.cpp.A75BB2AB9ECAC652.idx  cube.h.AD06E47578003F4F.idx  glad.c.75FBCC1F1E427EED.idx  glad.h.E5B9E6ED5EB8F2E9.idx  ground.cpp.D1CE2D63439F9759.idx  ground.h.7341129DD2DFF1B5.idx  imconfig.h.1698975813B252EA.idx  imgui.cpp.03E62AE925EAD074.idx  imgui.h.314B8372AC699F13.idx  imgui_draw.cpp.AA9242FDB22B583B.idx  imgui_impl_glfw.cpp.7AD53638E4864BFD.idx  imgui_impl_glfw.h.BCC5D91B0A6B35A2.idx  imgui_impl_opengl3.cpp.33387CBED867FA4B.idx  imgui_impl_opengl3.h.A632443FF2568BA8.idx  imgui_impl_opengl3_loader.h.B3C0DEF8CFF83BAF.idx  imgui_internal.h.B4622C326982C488.idx  imgui_tables.cpp.BACEE305DE838E0E.idx  imgui_widgets.cpp.BA55388CA49EEA05.idx  imstb_rectpack.h.72A4697BAD58A275.idx  imstb_textedit.h.89BAD6B0CDB1B382.idx  imstb_truetype.h.A1E25E547316F1FF.idx  khrplatform.h.55C53AEA5D4C1CAF.idx  main.cpp.D35C57E7D27A04C7.idx  shaders.h.7370414254C10C79.idx  skybox.cpp.093DB2543A1304EC.idx  skybox.h.E4CCB3C10F839C2A.idx  stb_image.h.326ECDED3C49BB12.idx
assets/cat/: 12221_Cat_v1_l3.mtl
include/: OBJ_Loader.h  camera.h  cube.h  ground.h  shaders.h  skybox.h
include/glad/: glad.h
shaders/: crazyCube.frag  crazyCube.vert  crazyCubeAlt.frag  ground.frag  ground.vert  skyBox.frag  skyBox.vert  windowLightning.frag
src/: cube.cpp  glad.c  ground.cpp  skybox.cpp
